welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:32: error: not found: value break
  } else {break}
          ^